# motyhub

./: .ghci  .gitignore  .standalone_migrations  Gemfile  README.md  Rakefile  motyhub.cabal  stack.yaml
db/: postgrest-development.conf  schema.rb
db/migrate/: 20170519055314_create_blogs.rb  20170525020304_create_articles.rb
motyhub-admin/: Procfile  package-lock.json  package.json
motyhub-admin/src/: App.js  appRestClient.js  authClient.js  blogs.js  posts.js
motyhub-app/: README.md  motyhub.cabal  stack.yaml
motyhub-app/app/: DevMain.hs
motyhub-app/config/: application.yaml  db.yaml
motyhub-app/src/: App.hs  Dev.hs
motyhub-app/src/App/: Config.hs  Model.hs  Prelude.hs  Route.hs
motyhub-app/src/App/Concept/Article/: Handler.hs  Operation.hs  Serializer.hs
motyhub-app/src/App/Concept/Blog/: Handler.hs  Serializer.hs
motyhub-app/src/App/Concept/Blog/Crawling/: Handler.hs  Operation.hs
motyhub-app/src/App/Config/: Application.hs
motyhub-app/src/Lib/: Movable.hs
motyhub-base/: README.md  motyhub-base.cabal
motyhub-crawler/: README.md  motyhub-crawler.cabal  stack.yaml
motyhub-crawler/src/Mid/Crawler/: DomSelector.hs  Lens.hs  Lib.hs  Monad.hs  Type.hs
motyhub-db/: README.md  motyhub-db.cabal  stack.yaml
motyhub-db/src/Mid/Db/: Prelude.hs  Query.hs
motyhub-db/src/Mid/Db/Monad/: Instance.hs
resource/: README.md
src/: App.hs  Dev.hs  Model.hs
src/App/: Config.hs  Model.hs  Orphan.hs  Prelude.hs  Route.hs
src/App/Concept/: Article.hs  Blog.hs
src/App/Concept/Article/: Handler.hs  Operation.hs  Serializer.hs
src/App/Concept/Blog/: Handler.hs  Operation.hs  Serializer.hs
src/App/Config/: Application.hs  Db.hs
src/App/Monad/: Db.hs  Handleable.hs  Operable.hs  Operational.hs
src/App/Monad/Db/: Class.hs  Instance.hs  Trans.hs
src/Lib/: Config.hs  Db.hs  Operation.hs  Query.hs  Serializer.hs
src/Mid/Db/: Config.hs  Monad.hs  Query.hs  Util.hs
src/Mid/Db/Monad/: Class.hs  Instance.hs  Trans.hs
static/: index.html
test/: Spec.hs
