name:                motyhub
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/runnable-inc/motyhub#readme
license:             BSD3
license-file:        LICENSE
author:              kayhide
maintainer:          kayhide@gmail.com
copyright:           2017 kayhide
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib.Db
                     , Lib.Config
                     , Lib.Serializer
                     , Lib.Query
                     , Lib.Operation
                     , App.Prelude
                     , App.Orphan
                     , App.Config
                     , App.Config.Application
                     , App.Config.Db
                     , App.Route
                     , App.Model
                     , App.Monad.Handleable
                     , App.Concept.Blog
                     , App.Concept.Blog.Serializer
                     , App.Concept.Blog.Operation
                     , App.Concept.Blog.Handler
                     , App.Concept.Article
                     , App.Concept.Article.Serializer
                     , App.Concept.Article.Operation
                     , App.Concept.Article.Handler
                     , App
                     , Dev
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , inflections
                     , containers
                     , time
                     , data-default
                     , aeson
                     , yaml
                     , filepath
                     , directory
                     , lens
                     , lens-aeson
                     , mtl
                     , natural-transformation
                     , monad-control
                     , monad-logger
                     , exceptions
                     , resourcet
                     , conduit
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , persistent-relational-record
                     , relational-query
                     , persistable-record
                     , sql-words
                     , transformers-base
                     , servant-server
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010

executable motyhub
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , motyhub
  default-language:    Haskell2010

test-suite motyhub-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , motyhub
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/runnable-inc/motyhub
