name:                motyhub
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/runnable-inc/motyhub/motyhub-app#readme
license:             BSD3
license-file:        LICENSE
author:              kayhide
maintainer:          kayhide@gmail.com
copyright:           2017 kayhide
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App.Prelude
                     , App.Orphan
                     , App.Config
                     , App.Config.Application
                     , App.Route
                     , App.Model
                     , App.Monad.Handleable
                     , App.Concept.Blog
                     , App.Concept.Blog.Serializer
                     , App.Concept.Blog.Operation
                     , App.Concept.Blog.Handler
                     , App.Concept.Blog.Crawling.Handler
                     , App.Concept.Article
                     , App.Concept.Article.Serializer
                     , App.Concept.Article.Operation
                     , App.Concept.Article.Handler
                     , App
                     , Dev
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , inflections
                     , containers
                     , time
                     , data-default
                     , aeson
                     , yaml
                     , filepath
                     , directory
                     , lens
                     , lens-aeson
                     , xml-html-conduit-lens
                     , transformers
                     , mtl
                     , natural-transformation
                     , monad-control
                     , monad-logger
                     , exceptions
                     , resourcet
                     , conduit
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , persistent-relational-record
                     , relational-query
                     , persistable-record
                     , sql-words
                     , transformers-base
                     , network-uri
                     , wreq
                     , servant-server
                     , wai
                     , wai-extra
                     , warp
                     , motyhub-base
                     , motyhub-db
                     , motyhub-crawler
  default-language:    Haskell2010
  ghc-options:         -fsimpl-tick-factor=200
  default-extensions:  DataKinds
                     , DefaultSignatures
                     , DeriveFunctor
                     , DeriveGeneric
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , TypeOperators
  other-extensions:    DeriveAnyClass
                     , GADTs
                     , QuasiQuotes
                     , TemplateHaskell
                     , TypeFamilies
                     , UndecidableInstances

executable motyhub
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       DevMain
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , motyhub
  default-language:    Haskell2010

test-suite motyhub-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , text
                     , bytestring
                     , inflections
                     , containers
                     , time
                     , data-default
                     , aeson
                     , yaml
                     , filepath
                     , directory
                     , lens
                     , lens-aeson
                     , transformers
                     , mtl
                     , natural-transformation
                     , monad-control
                     , monad-logger
                     , exceptions
                     , resourcet
                     , conduit
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , persistent-relational-record
                     , relational-query
                     , persistable-record
                     , sql-words
                     , transformers-base
                     , servant-server
                     , wai
                     , wai-extra
                     , warp
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , motyhub-base
                     , motyhub-db
                     , motyhub
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , DefaultSignatures
                     , DeriveFunctor
                     , DeriveGeneric
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , TypeOperators
  other-extensions:    DeriveAnyClass
                     , GADTs
                     , QuasiQuotes
                     , TemplateHaskell
                     , TypeFamilies
                     , UndecidableInstances

source-repository head
  type:     git
  location: https://github.com/runnable-inc/motyhub/motyhub-app
