name:                motyhub-base
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kayhide/motyhub/motyhub-base#readme
license:             BSD3
license-file:        LICENSE
author:              kayhide
maintainer:          kayhide@gmail.com
copyright:           2017 kayhide
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib.Config
                     , Lib.Serializer
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , inflections
                     , containers
                     , time
                     , data-default
                     , aeson
                     , yaml
                     , lens
                     , transformers
                     , mtl
                     , monad-control
                     , exceptions
                     , resourcet
                     , conduit
                     , persistent
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , DefaultSignatures
                     , DeriveFunctor
                     , DeriveGeneric
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , TypeOperators

test-suite motyhub-base-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , motyhub-base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kayhide/motyhub/motyhub-base
