name:                motyhub-crawler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kayhide/motyhub/motyhub-crawler#readme
license:             BSD3
license-file:        LICENSE
author:              kayhide
maintainer:          kayhide@gmail.com
copyright:           2017 kayhide
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Mid.Crawler.Lib
                     , Mid.Crawler.Type
                     , Mid.Crawler.DomSelector
                     , Mid.Crawler.Lens
                     , Mid.Crawler.Monad
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , bytestring
                     , text
                     , bifunctors
                     , lens
                     , xml-html-conduit-lens
                     , megaparsec
                     , operational
                     , wreq
                     , network-uri
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , DefaultSignatures
                     , DeriveFunctor
                     , DeriveGeneric
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , TypeFamilies
                     , TypeOperators

test-suite motyhub-crawler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , motyhub-crawler
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kayhide/motyhub/motyhub-crawler
