name:                motyhub-db
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kayhide/motyhub/motyhub-db#readme
license:             BSD3
license-file:        LICENSE
author:              kayhide
maintainer:          kayhide@gmail.com
copyright:           2017 kayhide
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Mid.Db.Prelude
                     , Mid.Db.Config
                     , Mid.Db.Monad
                     , Mid.Db.Monad.Class
                     , Mid.Db.Monad.Instance
                     , Mid.Db.Monad.Trans
                     , Mid.Db.Query
                     , Mid.Db.Util
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , containers
                     , time
                     , data-default
                     , aeson
                     , yaml
                     , filepath
                     , directory
                     , lens
                     , lens-aeson
                     , transformers
                     , mtl
                     , monad-control
                     , monad-logger
                     , exceptions
                     , resourcet
                     , conduit
                     , persistent
                     , persistent-postgresql
                     , persistent-relational-record
                     , relational-query
                     , persistable-record
                     , sql-words
                     , transformers-base
                     , motyhub-base
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , DefaultSignatures
                     , DeriveFunctor
                     , DeriveGeneric
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , TypeOperators
  other-extensions:    DeriveAnyClass
                     , GADTs
                     , QuasiQuotes
                     , TemplateHaskell
                     , TypeFamilies
                     , UndecidableInstances

test-suite motyhub-db-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , motyhub-db
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kayhide/motyhub/motyhub-db
